--- a/app/elements/cheque-realization-card/cheque-realization-card.html
+++ b/app/elements/cheque-realization-card/cheque-realization-card.html
@@ -123,6 +123,7 @@
         this.chequearr=[];
         document.querySelector('fromdate-icon-pickercard').ready();
         document.querySelector('todate-icon-pickercard').ready();
+        // document.querySelector('#chequerealiseinput1').selected=-1;
         // this.$.processingservice.FnFetchprocessingchequeService();
       },
       FnCallService:function(){
