--- a/app/elements/custompattern-fee-card/custompattern-fee-card.html
+++ b/app/elements/custompattern-fee-card/custompattern-fee-card.html
@@ -50,11 +50,11 @@
               </template>
               </paper-listbox>
           </div>
-          <div class="col-md-5" style="margin-top: 5%;">
+          <div class="col-md-5" style="margin-top: 5%;" hidden>
           <paper-checkbox id="customfeecurrentyear" on-change="FnCurrentHandler" style="margin-left: 5%;">Current Year</paper-checkbox>
           <paper-checkbox id="customfeenextyear" on-change="FnNextHandler" checked style="margin-left: 5%;">Next Year</paper-checkbox>
           </div>
-          <div class="col-md-3" style="margin-top: 4.5%;margin-left: -15%;">
+          <div class="col-md-3" style="margin-top: 4.5%;margin-left: 15%;">
             <datepicker-icon-card></datepicker-icon-card>
           </div>
      </div>
@@ -256,22 +256,22 @@
         localStorage.setItem("curr_sess_installmentpattern",installmentpattern);
         localStorage.setItem("curr_sess_insrequirement",'no');
         this.flag=0;
-          var academicyear=""; 
-          var date=new Date();
-          var y=date.getFullYear();  
-          var m=date.getMonth();
-          var d=date.getDate(); 
-          if(m<4){ 
-          var y1=(y-1)+1;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          } 
-          else{
-          var y1=y;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          }
-          localStorage.setItem("curr_sess_academicyear",academicyear);
+          // var academicyear=""; 
+          // var date=new Date();
+          // var y=date.getFullYear();  
+          // var m=date.getMonth();
+          // var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=(y-1)+1;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
+          // localStorage.setItem("curr_sess_academicyear",academicyear);
           localStorage.setItem("curr_sess_adhocdiscount",0); 
           localStorage.setItem("curr_sess_adhocdiscount",0);
           localStorage.setItem("curr_sess_adhocfeetype","");
@@ -472,8 +472,10 @@
         this.adhocdiscount="";
         this.adhocreason="";
         adhocfeetype="";
+        localStorage.setItem("curr_sess_academicyear","");
       },
       FnRefresh1:function(){
+        localStorage.setItem("curr_sess_academicyear","");
         localStorage.setItem("curr_sess_adhocdiscount",0);
         document.querySelector('#structureselfmode').checked=true;
         document.querySelector('#structurethirdpartymode').checked=false;
