--- a/app/elements/registerationfee-card/registerationfee-card.html
+++ b/app/elements/registerationfee-card/registerationfee-card.html
@@ -47,7 +47,7 @@
                    </template>
                    </paper-listbox>
         </div>
-        <div class="col-md-6" style="margin-top: 5%;">
+        <div class="col-md-6" style="margin-top: 5%;" hidden>
         <paper-checkbox id="regfeecurrentyear" on-change="FnCurrentHandler" style="margin-left: 5%;">Current Year</paper-checkbox>
         <paper-checkbox checked id="regfeenextyear" on-change="FnNextHandler" style="margin-left: 5%;">Next Year</paper-checkbox>
         </div>
@@ -162,22 +162,22 @@
           // var y2=y+1;  
           // academicyear="AY-"+y1+"-"+y2;
           // }
-          var academicyear=""; 
-          var date=new Date();
-          var y=date.getFullYear();  
-          var m=date.getMonth();
-          var d=date.getDate(); 
-          if(m<4){ 
-          var y1=(y-1)+1;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          } 
-          else{
-          var y1=y;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          }
-          localStorage.setItem("curr_sess_academicyear",academicyear); 
+          // var academicyear=""; 
+          // var date=new Date();
+          // var y=date.getFullYear();  
+          // var m=date.getMonth();
+          // var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=(y-1)+1;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
+          // localStorage.setItem("curr_sess_academicyear",academicyear); 
       },  
       FnCurrentHandler:function(e){
         this.totalfees="";
@@ -349,6 +349,7 @@
         this.querySelector('#registrationinput').style.visibility='hidden';
         document.querySelector('#regfeenextyear').checked=true;
         document.querySelector('#regfeecurrentyear').checked=false;
+        localStorage.setItem("curr_sess_academicyear","");
       },
       callService:function(){
         this.$.appregfeeservice.fetchallstudentadmissionsearchService();
