--- a/app/elements/rtefee-card/rtefee-card.html
+++ b/app/elements/rtefee-card/rtefee-card.html
@@ -52,7 +52,7 @@
                    </template>
                    </paper-listbox>
           </div>
-          <div class="col-md-5" style="margin-top: 5%;">
+          <div class="col-md-5" style="margin-top: 5%;" hidden>
           <paper-checkbox id="rtefeecurrentyear" on-change="FnCurrentHandler" style="margin-left: 5%;">Current Year</paper-checkbox>
           <paper-checkbox id="rtefeenextyear" on-change="FnNextHandler" checked style="margin-left: 5%;">Next Year</paper-checkbox>
           </div>
@@ -249,22 +249,22 @@
         localStorage.setItem("curr_sess_installmentpattern",installmentpattern);
         localStorage.setItem("curr_sess_insrequirement",'no');
         this.flag=0;
-          var academicyear=""; 
-          var date=new Date();
-          var y=date.getFullYear();  
-          var m=date.getMonth();
-          var d=date.getDate(); 
-          if(m<4){ 
-          var y1=(y-1)+1;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          } 
-          else{
-          var y1=y;
-          var y2=y+1;  
-          academicyear="AY-"+y1+"-"+y2;
-          }
-          localStorage.setItem("curr_sess_academicyear",academicyear);
+          // var academicyear=""; 
+          // var date=new Date();
+          // var y=date.getFullYear();  
+          // var m=date.getMonth();
+          // var d=date.getDate(); 
+          // if(m<4){ 
+          // var y1=(y-1)+1;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // } 
+          // else{
+          // var y1=y;
+          // var y2=y+1;  
+          // academicyear="AY-"+y1+"-"+y2;
+          // }
+          // localStorage.setItem("curr_sess_academicyear",academicyear);
           localStorage.setItem("curr_sess_adhocdiscount",0); 
           localStorage.setItem("curr_sess_adhocdiscount",0);
           localStorage.setItem("curr_sess_adhocfeetype","");
@@ -370,6 +370,7 @@
       document.querySelector('rte-installment-card').FnRefresh();
       },
      FnRefresh:function(){
+      localStorage.setItem("curr_sess_academicyear","");
       this.hidenoofinstallment=false;
       localStorage.setItem("curr_sess_adhocdiscount",0);
         this.payablepaidflag="Payable Amount";
@@ -421,6 +422,7 @@
         // localStorage.setItem("curr_sess_adhocreason","");
       },
       FnRefresh1:function(){
+        localStorage.setItem("curr_sess_academicyear","");
         this.hidenoofinstallment=false;
         localStorage.setItem("curr_sess_adhocdiscount",0);
         document.querySelector('#structureselfmode').checked=true;
