--- a/app/elements/enquiry-card/enquiry-card.html
+++ b/app/elements/enquiry-card/enquiry-card.html
@@ -1,5 +1,5 @@
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
-<link rel="import" href="..\..\bower_components/enquiry-details-card/enquiry-details-card.html">
+
 <dom-module id="enquiry-card">
   <template>
     <style>
@@ -10,10 +10,19 @@
     <div class="panel panel-default">
     <div class="panel-heading">
       <i class="fa fa-phone" aria-hidden="true"></i> Enquiries
-        <span class="pull-right">
-          <span class="panel-icon"><a href=""><i class="fa fa-plus" aria-hidden="true" data-toggle="modal" data-target="#addEnquiry"></i></a></span>
-          <span class="panel-icon"><a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></span>
-          <span class="panel-icon"><a href=""><i class="fa fa-trash" aria-hidden="true"></i></a></span>
+        <span class="pull-right" style="margin-top: -6%;">
+          <span >
+          <paper-dropdown-menu on-iron-select="FnSelectAcademicyear">
+            <paper-listbox class="dropdown-content" id="enqdashboardacyear" attr-for-selected="value" selected="{{selectedval}}">
+            <template  is="dom-repeat" items="{{academicarr}}" as="item">
+              <paper-item value="{{item.academic_year}}">{{item.academic_year}}</paper-item>
+            </template>
+            </paper-listbox>
+          </paper-dropdown-menu>
+          </span>
+          <span class="panel-icon"><a href=""><i class="fa fa-plus" aria-hidden="true" data-toggle="modal" data-target="#DashboardEnquiry"></i></a></span>
+          <!-- <span class="panel-icon"><a href=""><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></span>
+          <span class="panel-icon"><a href=""><i class="fa fa-trash" aria-hidden="true"></i></a></span> -->
         </span>
     </div>
     <div class="panel-body">
@@ -32,67 +41,43 @@
       </template>
      </div>
     </div>
-      <div class="modal fade bd-example-modal-lg" id="addEnquiry" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <h4 class="center-block event-title" id="eventTitle">
-                New Enquiry
-              </h4>
-            </div>
-            <div class="modal-body">
-              <newenquiry-card></newenquiry-card>
-            </div>
+     <div class="modal fade bd-example-modal-lg" id="DashboardEnquiry" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" id ="fee-dialog">
+        <div class="modal-content" id="fee-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="center-block event-title" id="">
+             New Enquiry
+            </h4>
+          </div>
+          <div class="modal-body">
+            <pre-apps></pre-apps>
           </div>
         </div>
       </div>
-      <div class="modal fade bd-example-modal-lg" id="grade1enquired" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <div class="col-md-12">
-                <span class="col-md-8">
-                  <h4 class="center-block event-title" id="Enquiry Details">
-                    Student Detail List
-                  </h4>
-                </span>
-               <!--  <span class="pull-right col-md-4">
-                  <paper-dropdown-menu label="Prospectus Status">
-                    <paper-listbox class="dropdown-content" on-iron-select="Fnprospectusstatus">
-                      <paper-item>>90%</paper-item>
-                      <paper-item>>75%</paper-item>
-                      <paper-item>>50%</paper-item>
-                      <paper-item><50%</paper-item>
-                      <paper-item><35%</paper-item>
-                      <paper-item><10%</paper-item>
-                    </paper-listbox>
-                  </paper-dropdown-menu>
-                </span> -->
-              </div>
-            </div>
-            <div class="modal-body">
-              <enquiry-details-card> </enquiry-details-card>
-            </div>
-          </div>
-        </div>
-      </div>
-      <crm-service id="service"></crm-service>
+    </div>
+  <crm-service id="service"></crm-service>
   </template>
   <script>
   (function() {
     'use strict';
-
     Polymer({
       is: 'enquiry-card',
       ready:function(){
-          this.$.service.getenquirycount();
-          this.$.service.getadmittedcount();
+        this.$.service.fetchacademicyearService();
+      },
+      FnSetDefaultYear:function(){
+        this.selectedval=localStorage.getItem("curr_sess_academicyear");
+        this.$.service.getenquirycount();
+        this.$.service.getadmittedcount();
+      },
+      FnSelectAcademicyear:function(e){
+        var academicyear=(e.target.selectedItem.textContent).trim();
+        localStorage.setItem("curr_sess_academicyear",academicyear);
+        this.$.service.getenquirycount();
+        this.$.service.getadmittedcount();
       }
     });
   })();
